<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lime_600"
        app:elevation="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize">

            <ImageView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_large"
                android:background="?attr/actionBarItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logout"
                tools:ignore="ContentDescription" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="70dp"
            android:orientation="horizontal">

            <View
                android:layout_width="25dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dicover_items"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:layout_marginRight="@dimen/spacing_middle"
            android:layout_marginBottom="@dimen/spacing_mlarge"
            android:clipToPadding="false"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="1dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:contentDescription="@string/ic_search"
                    android:focusable="true"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_searching" />

                <EditText
                    android:id="@+id/edt_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_items"
                    android:imeOptions="actionSearch"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/btn_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true"
                    android:tint="@color/grey_40"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/ic_close" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.material.appbar.AppBarLayout>

    <ViewFlipper
        android:id="@+id/view_flipper_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar_layout">

        <include
            android:id="@+id/view_login_first"
            layout="@layout/view_login_first" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/lime_600"
            android:indeterminateTintMode="src_atop" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_row" />

        <include layout="@layout/view_search_initial" />

        <include
            android:id="@+id/view_search_not_found"
            layout="@layout/view_search_not_found" />

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error" />
    </ViewFlipper>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:visibility="gone"
        app:backgroundTint="@color/lime_600"
        app:fabSize="normal"
        app:layout_anchor="@id/view_flipper_dashboard"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white"
        tools:ignore="ContentDescription" />
</RelativeLayout>